Added JS file to open and close menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </head>
 
   <body>
@@ -21,6 +22,25 @@
             <li><a href="#" class="nav__link">Home</a></li>
             <li><a href="#" class="nav__link">Contact</a></li>
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+          </ul>
+        </div>
+        <button class="btn__menu" onclick= "openMenu()">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="menu__backdrop">
+          <button class="btn__menu btn__menu--close" onclick= "openMenu()">
+            <i class="fas fa-times"></i>
+          </button>
+          <ul class="menu__links">
+            <li class="menu__list">
+              <a href="#" class="menu__link">Home</a>
+            </li>
+            <li class="menu__list">
+              <a href="#features" class="menu__link">Books</a>
+            </li>
+            <li class="menu__list">
+              <a href="#" class="menu__link no-cursor">Contact</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -149,11 +169,7 @@
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    src="assets/deep work.jpeg"
-                    alt=""
-                    class="book__img"
-                  />
+                  <img src="assets/deep work.jpeg" alt="" class="book__img" />
                 </figure>
                 <div class="book__title">Deep Work</div>
                 <div class="book__ratings">
@@ -163,9 +179,7 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $32.95
-                </div>
+                <div class="book__price">$32.95</div>
               </div>
             </div>
           </div>
@@ -181,11 +195,7 @@
           <div class="books">
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/book-1.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-1.jpeg" alt="" class="book__img" />
               </figure>
               <div class="book__title">The 10X Rule</div>
               <div class="book__ratings">
@@ -201,11 +211,7 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/book-2.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-2.jpeg" alt="" class="book__img" />
               </figure>
               <div class="book__title">Be Obssessed Or Be Average</div>
               <div class="book__ratings">
@@ -221,13 +227,9 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/book-3.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-3.jpeg" alt="" class="book__img" />
               </figure>
-              <div class="book__title">Rich Dad Poor  Dad</div>
+              <div class="book__title">Rich Dad Poor Dad</div>
               <div class="book__ratings">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -241,13 +243,9 @@
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/deep work.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-4.jpeg" alt="" class="book__img" />
               </figure>
-              <div class="book__title">Deep Work</div>
+              <div class="book__title">Cashflow Quadrant</div>
               <div class="book__ratings">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -255,19 +253,13 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
               </div>
-              <div class="book__price">
-                $32.95
-              </div>
+              <div class="book__price">$32.95</div>
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/deep work.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-5.jpeg" alt="" class="book__img" />
               </figure>
-              <div class="book__title">Deep Work</div>
+              <div class="book__title">48 Laws of Power</div>
               <div class="book__ratings">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -275,19 +267,13 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
               </div>
-              <div class="book__price">
-                $32.95
-              </div>
+              <div class="book__price">$32.95</div>
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/deep work.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-6.jpeg" alt="" class="book__img" />
               </figure>
-              <div class="book__title">Deep Work</div>
+              <div class="book__title">The 5 Second Rule</div>
               <div class="book__ratings">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -295,19 +281,13 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
               </div>
-              <div class="book__price">
-                $32.95
-              </div>
+              <div class="book__price">$32.95</div>
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/deep work.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-7.jpg" alt="" class="book__img" />
               </figure>
-              <div class="book__title">Deep Work</div>
+              <div class="book__title">Your Next Five Moves</div>
               <div class="book__ratings">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -315,19 +295,13 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
               </div>
-              <div class="book__price">
-                $32.95
-              </div>
+              <div class="book__price">$32.95</div>
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
-                <img
-                  src="assets/deep work.jpeg"
-                  alt=""
-                  class="book__img"
-                />
+                <img src="assets/book-8.jpeg" alt="" class="book__img" />
               </figure>
-              <div class="book__title">Deep Work</div>
+              <div class="book__title">Mastery</div>
               <div class="book__ratings">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -335,13 +309,41 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
               </div>
-              <div class="book__price">
-                $32.95
-              </div>
+              <div class="book__price">$32.95</div>
             </div>
           </div>
         </div>
       </section>
+
+      <section id="explore">
+        <div class="container">
+          <div class="row row--column">
+            <h2 class="section__title">
+              Explore more <span class="purple">Books</span>
+            </h2>
+            <a href="#features"><button class="btn">Browse Books</button></a>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="row row--column">
+          <a href="#">
+            <figure class="footer__logo">
+              <img src="assets/Library.svg" alt="" class="footer__logo--img" />
+            </figure>
+          </a>
+          <div class="footer__list">
+            <a href="" class="footer__link">Home</a>
+            <a href="" class="footer__link no-cursor">About</a>
+            <a href="" class="footer__link">Books</a>
+            <a href="" class="footer__link no-cursor">Contact</a>
+          </div>
+          <div class="footer__copyright">Copyright &copy; 2022 Library</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
