--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <img src="assets/Library.svg" class="logo" alt="" />
           <ul>
             <li><a href="#" class="nav__link">Home</a></li>
-            <li><a href="#" class="nav__link">Contact</a></li>
-            <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+            <li><a href="#" class="nav__link no-cursor">Contact</a></li>
+            <li><a href="#features" class="nav__link nav__link--primary">Books</a></li>
           </ul>
           <button class="btn__menu" onclick="openMenu()">
             <i class="fas fa-bars"></i>
@@ -257,7 +257,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
               </div>
-              <div class="book__price">$32.95</div>
+              <div class="book__price">$12.95</div>
             </div>
             <div class="book">
               <figure class="book__img--wrapper">
