--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <h2 class="section__title">
               Explore more <span class="purple">Books</span>
             </h2>
-            <a href="#features"><button class="btn">Browse Books</button></a>
+            <a href="books.html"><button class="btn">Browse Books</button></a>
           </div>
         </div>
       </section>
